--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,36 @@
 .nav {
   margin-bottom: 25px;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid grey;
+  margin: 0 30px 0 30px;
+  padding: 10px 0;
+}
+
+.logo {
+  height: 50px;
+  width: 50px;
+  margin: auto 0 auto 0;
+}
+
+.logoTitle {
+  margin-right: auto;
+  padding: 0 10px 0 10px;
+  font-weight: 500;
+  font-size: 18px;
 }
 
 .nav a {
-  background: #f0f0f0;
   border-radius: 4px;
   padding: 6px 10px;
   margin-right: 10px;
+  text-decoration: none;
+  margin: auto 0 auto 0;
+  color: dodgerblue;
 }
 
 .nav a.active {
-  color: #fff;
-  background: #7600dc;
+  text-decoration: underline;
 }
 
 .nav a.inactive {
