--- a/src/styles/rocketContainer.scss
+++ b/src/styles/rocketContainer.scss
@@ -1,5 +1,6 @@
 $buttonColor : rgba(0, 0, 255, 0.7);
 $buttonHoveredColor : rgba(0, 0, 255, 0.9);
+$badgeColor : rgba(100, 100, 255, 0.7);
 
 .rocketContainer {
   display: flex;
@@ -74,4 +75,14 @@ $buttonHoveredColor : rgba(0, 0, 255, 0.9);
     transform: scale(0.99);
     transition: 0.4s ease-in;
   }
+}
+
+.badgeIcon {
+  background-color: $badgeColor;
+  color: white;
+  border-radius: 5px;
+  font-weight: 100;
+  padding: 3px;
+  font-size: 14px;
+  line-height: 20px;
 }
