resolve the conflict and add some style on the type

--- a/src/styles/rocketContainer.scss
+++ b/src/styles/rocketContainer.scss
@@ -28,7 +28,7 @@ $badgeColor : rgba(100, 100, 255, 0.7);
 }
 
 .rocketDescription {
-  margin-top: 0;
+  margin: 5px 0 5px 0;
 }
 
 .rocketDetails {
