--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,10 @@
 }
 
 .logoTitle {
-  margin-right: auto;
+  margin: auto auto auto 0;
   padding: 0 10px 0 10px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .nav a {
